--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.39.0",
-    "@types/node": "^20.8.6"
+    "@types/node": "^20.8.6",
+    "eslint": "^8.57.1"
   },
   "jest-junit": {
     "suiteName": "jest tests",
